Added proper inclusion of theme colors

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -3,9 +3,9 @@ $mainMod = SUPER
 
 # Apps
 bindd = $mainMod, RETURN, Launch Terminal, exec, uwsm-app -- ghostty
-bindd= $mainMod SHIFT, F, Launch File Manager, exec, uwsm-app -- nautilus
-bindd = $mainMod SHIFT, B, Browser, exec, omarchy-launch-browser
-bindd = $mainMod SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
+bindd= $mainMod, E, Launch File Manager, exec, uwsm-app -- nautilus
+bindd = $mainMod, B, Browser, exec, firefox
+bind = $mainMod, SPACE, exec, uwsm-app -- walker 
 
 # Actions
 
