--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,12 +1,17 @@
 
-source = ~/.config/hypr/theme.conf
+####            ####
+#### NUMBIELAND ####
+####            ####
 
-# Change your own setup in these files (and overwrite any settings from defaults!)
-source = ~/.config/hypr/input.conf
+### Avoid touching these
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/autostart.conf
-source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/envs.conf
+source = ~/.config/hypr/looknfeel.conf
+source = ~/.local/share/numbie/current/theme/hyprland.conf
+
+
+### Change these
 source = ~/.config/hypr/monitors.conf
-# Add any other personal Hyprland configuration below
-# windowrule = workspace 5, class:qemu
+source = ~/.config/hypr/input.conf
+
