--- a/hypr/looknfeel.conf
+++ b/hypr/looknfeel.conf
@@ -1,19 +1,15 @@
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
+# inside looknfeel.conf
 
 # Variables
-$activeBorderColor = rgba(33ccffee) rgba(00ff99ee) 45deg
-$inactiveBorderColor = rgba(595959aa)
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 4
     gaps_out = 6
-
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $activeBorderColor
-    col.inactive_border = $inactiveBorderColor
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -26,7 +22,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 12
+    rounding = 5
     rounding_power = 4
 
     active_opacity = 1.0
@@ -52,8 +48,6 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#group
 group {
-    col.border_active = $activeBorderColor
-    col.border_inactive = $inactiveBorderColor
 
     groupbar {
         font_size = 12
