Added laptop keybind support, swayOSD

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -6,6 +6,8 @@ exec-once = uwsm-app -- fcitx5
 exec-once = uwsm-app -- swaybg -i ~/.local/share/numbie/current/background -m fill
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = uwsm-app -- elephant
+# OSD server
+exec = swayosd-server
 # Slow app launch fix -- set systemd vars
 exec-once = systemctl --user import-environment $(env | cut -d'=' -f 1)
 exec-once = dbus-update-activation-environment --systemd --all
