--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -49,15 +49,18 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10 # Move active window to workspace 
 
 # Function Keys
 
-bind = , XF86MonBrightnessUp, exec, brightnessctl -q s +10%                                                                                                  # Increase brightness by 10%
-bind = , XF86MonBrightnessDown, exec, brightnessctl -q s 10%-                                                                                                # Reduce brightness by 10%
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+                                                                          # Increase volume by 5% (max 100% limit also added hold to raise volume)
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-                                                                               # Reduce volume by 5% (min 0% limit also added hold to lower volume)
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle                                                                                      # Toggle mute
-bind = , XF86AudioPlay, exec, playerctl play-pause                                                                                                           # Audio play pause
-bind = , XF86AudioPause, exec, playerctl pause                                                                                                               # Audio pause
-bind = , XF86AudioNext, exec, playerctl next                                                                                                                 # Audio next
-bind = , XF86AudioPrev, exec, playerctl previous                                                                                                             # Audio previous
-bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle                                                                               # Toggle microphone
-bind = , XF86Lock, exec, hyprlock                                                                                                                            # Open screenlock
-bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10
+
+bind = , XF86WebCam, exec, wpctl set-mute @DEFAULT_VIDEO_SOURCE@ toggle
+
+# Fullscreen
+bind = , Print, exec, grim ~/Pictures/screenshot-$(date +'%Y%m%d-%H%M%S').png
+
+# Region (Shift + Print)
+bind = SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/screenshot-$(date +'%Y%m%d-%H%M%S').png
+# Volume
+binde = , XF86AudioRaiseVolume,  exec, swayosd-client --output-volume +5                    # Volume up
+binde = , XF86AudioLowerVolume,  exec, swayosd-client --output-volume -5                    # Volume down
+bind = , XF86AudioMute,         exec, swayosd-client --output-volume mute-toggle            # Toggle mute
+# Brightness
+binde = ,XF86MonBrightnessUp,    exec, swayosd-client --brightness raise                    # Increase brightness
+binde = ,XF86MonBrightnessDown,  exec, swayosd-client --brightness lower                    # Decrease brightness
